# serde_discord

./: Cargo.toml  README.md
src/: lib.rs
src/interaction/: interaction.rs  mod.rs
src/interaction/data/: command.rs  mod.rs
src/register/: mod.rs  register.rs
src/register/command/: choice.rs  mod.rs  option.rs
src/response/: mod.rs  response.rs
src/response/data/: autocomplete.rs  mod.rs  modal.rs
src/response/data/message/: mod.rs
src/response/data/message/component/: action_row.rs  button.rs  mod.rs  select_menu.rs  text_input.rs
src/types/: command.rs  command_option.rs  mod.rs  multi_type_value.rs  snowflake.rs
