[package]
name = "serde_discord"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.6.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_repr = "0.1.19"

[features]
default = ["types"]
register = ["types"]
response = ["types"]
interaction = ["types"]
responding = ["types", "response", "interaction"]
types = []
